--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <main>
             <section>
                 <div class="card">
-                    <img id='card_img' src="Assets/Top Container.jpg" alt="">
+                    <img id='card_img' src="Top Container.jpg" alt="">
                     <h1>Creating email templates has never been easier</h1>
                     <article>
                         <h2>Receive daily emails on how to best create email templates, completely free</h2>
@@ -26,7 +26,7 @@
                         </form>
                         <p class="card_gray">No spam, ever. Unsubscribe anytime</p>
                         <div class="autor">
-                            <img id="avatar" src="Assets/User Avatar.svg" alt="User's avatar">
+                            <img id="avatar" src="User Avatar.svg" alt="User's avatar">
                             <div class="autor_names">
                                 <p class="name">Andrew Vickins</p>
                                 <p class="job">Newsletter Designer</p>
